test/e2e/fixtures/headers-underscores-reject/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headers-underscores-reject-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headers-underscores-reject-echo
  template:
    metadata:
      labels:
        app: headers-underscores-reject-echo
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: headers-underscores-reject-echo
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: headers-underscores-reject-echo
spec:
  selector:
    app: headers-underscores-reject-echo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
# The Module is global to one Emissary instance, hence `slot: exclusive`.
apiVersion: getambassador.io/v3alpha1
kind: Module
metadata:
  name: ambassador
spec:
  ambassador_id: [(env('SLOT'))]
  config:
    headers_with_underscores_action: REJECT_REQUEST
---
apiVersion: getambassador.io/v3alpha1
kind: Mapping
metadata:
  name: target
spec:
  ambassador_id: [(env('SLOT'))]
  hostname: "*"
  prefix: /target/
  service: headers-underscores-reject-echo:8080
