test/e2e/fixtures/headers-underscores-reject/queries.json
[
  {
    "url": "/target/",
    "method": "GET",
    "headers": {
      "t_underscore": "foo"
    }
  },
  {
    "url": "/target/",
    "method": "GET"
  }
]
